--- a/static/css/header.css
+++ b/static/css/header.css
@@ -4,8 +4,7 @@
     position: fixed;
     justify-content: space-between;
     width: 100%;
-    height: 8%;
-    min-width: 800px;
+    height: auto;
 }
 .site-header h1{
     color: rgb(10,9,12);
