--- a/static/css/iconcolor.css
+++ b/static/css/iconcolor.css
@@ -1,3 +1,12 @@
+.prof img{
+    padding: 1em 1em;
+    margin-top: 1em;
+    width: 20%;
+    height: auto;
+    min-width: 168px;
+    border-radius: 50%;
+}
+
 a.twitter:link, a.twitter:visited, a.twitter:active {
     color: rgba(29,161,242,0.7);
 }
